<resources>
    <string name="app_name">MyBookApp</string>
    <string name="title_activity_book_list">BookListActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_all_books">All Books</string>
    <string name="menu_fantasy">Fantasy</string>
    <string name="menu_scifi">Science Fiction</string>
    <string name="menu_nonfiction">Nonfiction</string>
    <string name="menu_poetry">Poetry</string>
    <string name="menu_general_fiction">General Fiction</string>

    <string name="profile_username">Ara Gamaliel</string>
    <string name="profile_user_email">aragamalielboanerges@gmail.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_title_sample">This is Book Title Sample</string>
    <string name="borrow_this_book">Borrow This Book</string>
    <string name="username">username</string>
    <string name="username_email_com">username@email.com</string>
    <string name="all_books">All Books</string>
</resources>