<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_fantasy">

    <fragment
        android:id="@+id/nav_fantasy"
        android:name="com.example.mybookapp.ui.fantasy.FantasyFragment"
        android:label="@string/menu_fantasy"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_scifi"
        android:name="com.example.mybookapp.ui.scifi.ScifiFragment"
        android:label="@string/menu_scifi"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_nonfiction"
        android:name="com.example.mybookapp.ui.nonfiction.NonfictionFragment"
        android:label="@string/menu_nonfiction"
        tools:layout="@layout/fragment_slideshow" />
</navigation>